<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/_15sdp"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_name"
        android:paddingStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/input_price"
        android:paddingStart="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/service_price"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/input_name" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/save"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_price" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input_price" />

</androidx.constraintlayout.widget.ConstraintLayout>