<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHomeActivity">
    <LinearLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:background="@drawable/rectangle_round"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_admin"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_an_option"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/showUsers"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="96dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/button_home"
        android:text="@string/show_barbers"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textColor="#22BE87"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/profile"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="96dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/button_home"
        android:text="@string/my_profile"
        android:textColor="#22BE87"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />


</androidx.constraintlayout.widget.ConstraintLayout>