<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <LinearLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/_160sdp"
        android:background="@drawable/rectangle_round"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_an_option"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/near_by_saloon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_success"
        android:text="@string/find_near_by_salon"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_success"
        android:text="@string/view_available_salons"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/near_by_saloon" />


    <Button
        android:id="@+id/appointement2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_success"
        android:text="@string/my_appointment"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/searchBtn"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />
    <Button
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_success"
        android:text="@string/change_language_to_english"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/searchBtn"
        app:layout_constraintTop_toBottomOf="@+id/appointement2" />

    <Button
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_success"
        android:text="@string/my_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/searchBtn"
        app:layout_constraintTop_toBottomOf="@+id/change_language" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="211dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/button_danger"
        android:text="@string/signout"
        android:textAllCaps="false"
        android:textColor="#C62828"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <!--    <Button-->
    <!--        android:id="@+id/appointement2"-->
    <!--        android:layout_width="105dp"-->
    <!--        android:layout_height="96dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:background="@drawable/button_home"-->
    <!--        android:text="Appointement"-->
    <!--        android:textColor="#22BE87"-->
    <!--        android:textSize="13sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/diseasepredict"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnRequst"-->
    <!--        app:layout_constraintStart_toEndOf="@id/profile"-->
    <!--        tools:layout_editor_absoluteY="610dp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/diseasepredict"-->
    <!--        android:layout_width="105dp"-->
    <!--        android:layout_height="96dp"-->
    <!--        android:layout_marginTop="220dp"-->
    <!--        android:layout_marginBottom="98dp"-->
    <!--        android:background="@drawable/button_home"-->
    <!--        android:text="Disease Predict"-->
    <!--        android:textColor="#22BE87"-->
    <!--        android:textSize="13sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"-->
    <!--        app:layout_constraintStart_toStartOf="@id/myDoctors"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/view"-->
    <!--        app:layout_constraintVertical_bias="0.552" />-->


</androidx.constraintlayout.widget.ConstraintLayout>