<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".DoctorHomeActivity">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_marginBottom="40dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/listPatients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <Button
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_success"
        android:text="@string/change_language_to_english"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signOutBtn"/>

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_margin="20dp"
        android:background="#C62828"
        android:text="@string/signout"
        android:textColor="#ffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/appointement"
        android:layout_width="118dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="237dp"
        android:background="@drawable/button_home"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingBottom="8dp"
        android:text="@string/requests"
        android:textAllCaps="false"
        android:textColor="#22BE87"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRequst"
        android:layout_width="118dp"
        android:layout_height="107dp"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/button_home"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingBottom="8dp"
        android:text="@string/confirmed"
        android:textAllCaps="false"
        android:textColor="#22BE87"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/listPatients"
        android:layout_width="118dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="237dp"
        android:background="@drawable/button_home"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingBottom="8dp"
        android:text="@string/my_services"
        android:textAllCaps="false"
        android:textColor="#22BE87"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profile"
        android:layout_width="118dp"
        android:layout_height="107dp"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/button_home"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingBottom="8dp"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textColor="#22BE87"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:background="@drawable/rectangle_round"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="160dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="85dp"
                android:text="@string/you_are_logged_in_as_salon_services_provider"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="105dp"
                android:layout_marginLeft="105dp"
                android:layout_marginBottom="55dp"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="383dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/ic_profile" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@id/appointement"
        app:layout_constraintEnd_toEndOf="@id/appointement"
        app:layout_constraintStart_toStartOf="@id/appointement"
        app:layout_constraintTop_toTopOf="@id/appointement"
        app:srcCompat="@drawable/ic_appointement" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="@id/btnRequst"
        app:layout_constraintEnd_toEndOf="@id/btnRequst"
        app:layout_constraintStart_toStartOf="@id/btnRequst"
        app:layout_constraintTop_toTopOf="@id/btnRequst"
        app:srcCompat="@drawable/ic_request" />


</androidx.constraintlayout.widget.ConstraintLayout>